--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-    
+    <section id="main">
+        <h3>Register your account</h3>
+        <form>
+            <label>Name</label><br>
+            <input type="text" id="name" name="name"><br>
+            <label>Username</label><br>
+            <input type="text" id="username" name="username"><br>
+            <label>Email</label><br>
+            <input type="email" id="email" name="email"><br>
+            <label>Password</label><br>
+            <input type="password" id="password" name="password"><br>
+            <input type="text" id="lname" name="lname"><br>
+            <button>Submit</button>
+          </form>
+    </section>
     <script src="index.js"></script>
 </body>
 </html>
