--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <input type="password" id="password1" name="password1" required><div id="passwordDiv1">Password must be at least 8 characters long.</div><br>
             <label id="passwordLabel2">Confirm Password</label><br>
             <input type="password" id="password2" name="password2" required><div id="passwordDiv2">Password must match in both fields.</div><br>
-            <button id="submitButton">Sign Up</button>
+            <button id="submitButton" disabled>Sign Up</button>
           </form>
     </section>
     <script src="index.js"></script>
