Display form info after clicking button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <label id="emailLabel">Email</label><br>
             <input type="email" id="email" name="email" required><br>
             <label id="passwordLabel1">Password</label><br>
-            <input type="password" id="password1" name="password1" required><div id="passwordDiv1">Password must be at least 8 characters long.</div><br>
+            <input type="password" id="password1" name="password" required><div id="passwordDiv1">Password must be at least 8 characters long.</div><br>
             <label id="passwordLabel2">Confirm Password</label><br>
             <input type="password" id="password2" name="password2" required><div id="passwordDiv2">Password must match in both fields.</div><br>
             <button id="submitButton" disabled>Sign Up</button>
