Swapped to some classes

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-    <section id="main">
+    <section class="mainSection">
         <h3>Register your account</h3>
-        <form id="form">
-            <label id="nameLabel">Name</label><br>
+        <form class="form">
+            <label class="inputLabel" id="nameLabel">Name</label><br>
             <input type="text" id="name" name="name" required><br>
-            <label id="usernameLabel">Username</label><br>
+            <label class="inputLabel" id="usernameLabel">Username</label><br>
             <input type="text" id="username" name="username" required><br>
-            <label id="emailLabel">Email</label><br>
+            <label class="inputLabel" id="emailLabel">Email</label><br>
             <input type="email" id="email" name="email" required><br>
-            <label id="passwordLabel1">Password</label><br>
+            <label class="inputLabel" id="passwordLabel1">Password</label><br>
             <input type="password" id="password1" name="password" required><div id="passwordDiv1">Password must be at least 8 characters long.</div><br>
-            <label id="passwordLabel2">Confirm Password</label><br>
+            <label class="inputLabel" id="passwordLabel2">Confirm Password</label><br>
             <input type="password" id="password2" name="password2" required><div id="passwordDiv2">Password must match in both fields.</div><br>
             <button id="submitButton" disabled>Sign Up</button>
           </form>
